# RaftRag

./: .env.example  .gitignore  LICENSE.txt  Makefile  README.md  install.bat  install.sh  pyproject.toml  requirements-torch-cuda121.txt  requirements.txt
scripts/: run_server.py  validate_deployment.py
src/app/: main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: fine_tuning.py  health.py  raft.py  rag.py
src/app/core/: config.py  exceptions.py  logging.py
src/app/db/: session.py
src/app/models/: database.py
src/app/prompts/: __init__.py  rag_system_prompt.py
src/app/schemas/: fine_tuning.py  raft.py  rag.py
src/app/services/: base.py  centralized_rag_service.py  document_ingestion_service.py  fine_tuning_service.py  raft_service.py
src/app/storage/: __init__.py  chroma_vector_storage.py
src/app/utils/: local_models.py  resource_detector.py  validators.py
