[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raft-rag-server"
version = "1.0.0"
description = "RAFT Fine-tuning with DoRA and RAG Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mahmoud BAYOUMI", email = "mahmoud.bayoumi.pp@gmail.com"}
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | venv_raft_rag
  | venv_raft_rag_wsl
  | venv_light_27
  | venv
  | venv_*
  | .git
  | build
  | dist
  | data
  | logs
  | output
  | htmlcov
  | .pytest_cache
  | .mypy_cache
  | scripts/test_*
  | scripts/validate_*
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    "venv_raft_rag",
    "venv_raft_rag_wsl",
    "venv_light_27",
    "venv",
    "venv_*",
    ".git",
    "build",
    "dist",
    "data",
    "logs",
    "output",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
]
skip_glob = [
    "scripts/test_*.py",
    "scripts/validate_*.py",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (we use specific ones)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "C0103",  # invalid-name (for df, etc.)
]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv_raft_rag",
    "venv_raft_rag_wsl",
    "venv_light_27",
    "venv",
    "venv_*",
    "build",
    "dist",
    "data",
    "logs",
    "output",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
    "scripts/test_*",
    "scripts/validate_*",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=src/app",
    "--cov-report=term",
    "--cov-report=term-missing",
]
# Exclude test artifacts from coverage reports
norecursedirs = [
    "venv",
    "venv_*",
    "build",
    "dist",
    "data",
    "logs",
    "output",
    "htmlcov",
    ".pytest_cache",
    ".git",
    "__pycache__",
]
